# 3d-calibration

./: README.md
aruco_detection/: package.xml
aruco_detection/src/: detector.cpp
cc_utils/: CMakeLists.txt
cc_utils/src/: cc_utils.cpp
common/cc_utils/: CMakeLists.txt  package.xml
common/cc_utils/include/cc_utils/: cc_utils.h
common/cc_utils/src/: cc_utils.cpp
common/single_corner/: CMakeLists.txt  Readme.md  package.xml
common/single_corner/include/single_corner/: single_corner.h
common/single_corner/launch/: test_single_corner.launch
common/single_corner/src/: single_corner.cpp  test_single_corner.cpp
common/stella_jsp_utils/: CMakeLists.txt  package.xml
common/stella_jsp_utils/include/stella_jsp_utils/: stella_jsp_utils.h
common/stella_jsp_utils/src/: go.cpp  stella_jsp_utils.cpp
deprecated/: Readme.md
deprecated/extrinsic/aruco_detection/: CMakeLists.txt  package.xml
deprecated/extrinsic/aruco_detection/launch/: aruco_detect.launch
deprecated/extrinsic/aruco_detection/src/: detector.cpp
deprecated/extrinsic/extrinsic_calibration/: CMakeLists.txt  package.xml
deprecated/extrinsic/extrinsic_calibration/launch/: frame_publisher.launch
deprecated/extrinsic/extrinsic_toplevel/: CMakeLists.txt  package.xml
deprecated/extrinsic/extrinsic_toplevel/src/: extrinsic_exec.cpp
deprecated/lidar_extrinsic/lidar_aruco/: CMakeLists.txt  package.xml
deprecated/lidar_extrinsic/lidar_aruco/src/: detector.cpp
deprecated/lidar_extrinsic/lidar_ext_acquisition/: CMakeLists.txt  package.xml
deprecated/lidar_extrinsic/lidar_ext_acquisition/data/: lidar_acquired_poses.csv
deprecated/lidar_extrinsic/lidar_ext_acquisition/launch/: extrinsic_acquire.launch
deprecated/lidar_extrinsic/lidar_ext_acquisition/src/: lidar_extrinsic_acquisition.cpp
deprecated/sprayhead/sprayhead_calibration/: CMakeLists.txt  Readme.md  centers.csv  package.xml
deprecated/toolflange/toolflange_acquisition/: CMakeLists.txt  package.xml
dotboard_detection/: CMakeLists.txt
dotboard_detection/include/: circle_detector.hpp
dotboard_detection/launch/: dots_detect.launch
dotboard_detection/src/: circle_detector.cpp  detector.cpp
extrinsic/extrinsic_acquisition/: package.xml
extrinsic_acquisition/: CMakeLists.txt  package.xml
extrinsic_acquisition/data/: cam_info.txt  extrinsic_detections.csv  poses.csv
extrinsic_acquisition/src/: extrinsic_acquisition.cpp
extrinsic_calibration/launch/: calibrate.launch
extrinsic_calibration/src/: calibrator.cpp
extrinsic_calibration_check/: CMakeLists.txt  package.xml
extrinsic_calibration_check/launch/: calibrate.launch
extrinsic_calibration_check/src/: calibrator.cpp
extrinsic_toplevel/: CMakeLists.txt
extrinsic_toplevel/src/: extrinsic_exec.cpp
extrinsic_toplevel/srv/: RunCalibration.srv
intrinsic/dotboard_detection/: CMakeLists.txt  Readme.md  package.xml
intrinsic/intrinsic_acquisition/: CMakeLists.txt  Readme.md  package.xml
intrinsic/intrinsic_acquisition/data/: 3-Axis.yml  rename.bash  ros_industrial.yml  task_description.yml
intrinsic/intrinsic_acquisition/data_old/: task_description.yml  task_description_davinci.yml
intrinsic/intrinsic_acquisition/launch/: intrinsic_acquisition.launch  intrinsic_axes_helper.launch
intrinsic/intrinsic_acquisition/src/: intrinsic_acquisition.cpp  intrinsic_axes_helper.cpp
intrinsic/intrinsic_calibration/: CMakeLists.txt  Readme.md  package.xml
intrinsic/intrinsic_calibration/launch/: calibrate.launch
intrinsic/intrinsic_calibration/src/: calibrator.cpp
intrinsic/intrinsic_simulation/: CMakeLists.txt  package.xml
intrinsic/intrinsic_simulation/launch/: cam_launch.launch
intrinsic/intrinsic_simulation/src/: sim_target_positioner.cpp
intrinsic/intrinsic_simulation/tests/: basic_camera.yml  basic_camera_1.yml  basic_camera_2.yml
intrinsic/intrinsic_simulation/urdf/: camera.urdf  target.urdf
intrinsic/test_dewarp/: CMakeLists.txt  package.xml
intrinsic/test_dewarp/launch/: test_dewarp_topic.launch
intrinsic/test_dewarp/src/: dewarp_common.cpp  test_dewarp_file.cpp  test_dewarp_topic.cpp
intrinsic_acquisition/: CMakeLists.txt
intrinsic_acquisition/data/: intrinsic_detections.csv  task_description.yml
intrinsic_acquisition/launch/: intrinsic_acquisition.launch  intrinsic_axes_helper.launch
intrinsic_acquisition/src/: intrinsic_acquisition.cpp  intrinsic_axes_helper.cpp
intrinsic_calibration/: CMakeLists.txt
intrinsic_calibration/launch/: calibrate.launch
intrinsic_calibration/src/: calibrator.cpp
intrinsic_simulation/: CMakeLists.txt  package.xml
intrinsic_simulation/launch/: cam_launch.launch
intrinsic_simulation/src/: sim_target_positioner.cpp
intrinsic_simulation/tests/: basic_camera.yml
intrinsic_simulation/urdf/: camera.urdf  target.urdf
intrinsic_simulation/xml/: spawn_target.xml
lidar_extrinsic/lidar_aruco/: package.xml
lidar_extrinsic/lidar_ext_acquisition/: package.xml
rbip_camera_extrinsics/: CMakeLists.txt  Readme.md  package.xml
rbip_camera_extrinsics/launch/: calibrate.launch
rbip_camera_extrinsics/matlab/: image0_rect_keypoints.csv  image0_robot_keypoints.csv  image1_rect_keypoints.csv  image1_robot_keypoints.csv  image2_rect_keypoints.csv  image2_robot_keypoints.csv  position_sanity_check.m
rbip_camera_extrinsics/src/: calibrator.cpp
sprayhead/sprayhead_calibration/: CMakeLists.txt  Readme.md
sprayhead/sprayhead_calibration/launch/: offer_services.launch
sprayhead/sprayhead_calibration/src/: detector.cpp  detector_h.cpp  detector_v.cpp
sprayhead/sprayhead_calibration/srv/: Sprayhead_Calibrate.srv
stella_jsp_utils/: package.xml
stella_jsp_utils/include/stella_jsp_utils/: stella_jsp_utils.h
test_dewarp/: CMakeLists.txt  package.xml
test_dewarp/launch/: test_dewarp_file.launch
test_dewarp/src/: test_dewarp_file.cpp
toolflange/toolflange_acquisition/: CMakeLists.txt  package.xml
toolflange/toolflange_detection/: CMakeLists.txt
toolflange/toolflange_detection/launch/: toolflange_detect.launch
toolflange/toolflange_detection/src/: detector.cpp
(+312 files in other folders)
