<?xml version="1.0"?>
<package>
	<name>extrinsic_acquisition</name>
	<version>1.0.0</version>
	<description>Image data acquisition utility for arm and LIDAR extrinsic calibration.</description>
	<maintainer email="tes77@case.edu">Tom Shkurti</maintainer>
	<!--What is roadprintz's code licensed as?-->
	<license>TODO</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>		<run_depend>roscpp</run_depend>
	<build_depend>xform_utils</build_depend>	<run_depend>xform_utils</run_depend>
	
	<export></export>
</package>
