<?xml version="1.0"?>
<package>
	<name>rbip_camera_extrinsics</name>
	<version>1.0.0</version>
	<description>Calibration solver for extrinsic camera position using checkerboard data.</description>
	<maintainer email="tes77@case.edu">Tom Shkurti</maintainer>
	<!--What is roadprintz's code licensed as?-->
	<license>TODO</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>	<run_depend>roscpp</run_depend>
	
	<build_depend>cc_utils</build_depend> <run_depend>cc_utils</run_depend>
	<export></export>
</package>
