<?xml version="1.0"?>
<package>
	<name>stella_jsp_utils</name>
	<version>1.0.0</version>
	<description>Utilities for commanding Stella in joint space.</description>
	<author email="wsn@case.edu">Wyatt Newman</author>
	<maintainer email="tes77@case.edu">Tom Shkurti</maintainer>
	<!--What is roadprintz's code licensed as?-->
	<license>TODO</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>	<run_depend>roscpp</run_depend>
	
	<export></export>
</package>
