<?xml version="1.0"?>
<package>
	<name>intrinsic_simulation</name>
	<version>1.0.0</version>
	<description>Simulated image data acquisition system for intrinsic calibration.</description>
	<maintainer email="tes77@case.edu">Tom Shkurti</maintainer>
	<!--What is roadprintz's code licensed as?-->
	<license>LicenseRef-RoadPrintz-Proprietary</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>	<run_depend>roscpp</run_depend>
	<build_depend>turtlesim</build_depend>	<run_depend>turtlesim</run_depend>
	
	<export></export>
</package>
