<?xml version="1.0"?>
<package>
	<name>extrinsic_toplevel</name>
	<version>1.0.0</version>
	<description>Top-level manager for one-press camera extrinsic calibration.</description>
	<maintainer email="tes77@case.edu">Tom Shkurti</maintainer>
	<!--What is roadprintz's code licensed as?-->
	<license>TODO</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>		<run_depend>roscpp</run_depend>
	<build_depend>message_generation</build_depend>	<run_depend>message_generation</run_depend>
							<run_depend>message_runtime</run_depend>
	
	<export></export>
</package>
