<?xml version="1.0"?>
<package>
	<name>lidar_ext_acquisition</name>
	<version>1.0.0</version>
	<description>Point cloud acquisition utility for LIDAR extrinsic calibration.</description>
	<maintainer email="tes77@case.edu">Tom Shkurti</maintainer>
	<!--What is roadprintz's code licensed as?-->
	<license>LicenseRef-RoadPrintz-Proprietary</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>		<run_depend>roscpp</run_depend>
	<build_depend>xform_utils</build_depend>	<run_depend>xform_utils</run_depend>
	
	<export></export>
</package>
