<?xml version="1.0"?>
<package>
	<name>sprayhead_calibration</name>
	<version>1.0.0</version>
	<description>Acquire sprayhead lines.</description>
	<maintainer email="tes77@case.edu">Tom Shkurti</maintainer>
	<!--What is roadprintz's code licensed as?-->
	<license>LicenseRef-RoadPrintz-Proprietary</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>			<run_depend>roscpp</run_depend>
	<build_depend>message_generation</build_depend>		<run_depend>message_runtime</run_depend>
	<!--build_depend>xform_utils</build_depend>	<run_depend>xform_utils</run_depend-->
	
	<export></export>
</package>
